--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -23,101 +23,105 @@
     </style>
 {% endblock %}
 {% block body %}
-    <table class="table table-striped">
-        <thead>
-            <tr style="text-align: center;">
-                <th scope="col">Title</th>
-                <th scope="col">Date</th>
-                <th scope="col">Show</th>
-                <th scope="col">Edit</th>
-                <th scope="col">Delete</th>
-                <th scope="col">Send</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for post in posts %}
+    <div class="table">
+        <table class="table table-striped">
+            <thead>
                 <tr style="text-align: center;">
-                    <td>{{ post.Title }}</td>
-                    <td>{{ post.Date|date("d/m/Y H:i") }}</td>
-                    <td>
-                        <a class="btn btn-success" href="#">Show Post</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-warning" href="#">Edit Post</a>
-                    </td>
-
-                    <td>
-                        <button class="btn btn-outline-danger delete_post" data-target="#exampleModalCenterDelete" data-toggle="modal" type="button">
-                            <i class="fas fa-trash-alt"></i>
-                        </button>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-primary send_post" data-target="#exampleModalCenterSend" data-toggle="modal" type="button">
-                            <i class="fas fa-share-alt"></i>
-                        </button>
-                    </td>
+                    <th scope="col">Title</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Show</th>
+                    <th scope="col">Edit</th>
+                    <th scope="col">Delete</th>
+                    <th scope="col">Send</th>
                 </tr>
-                <!-- Delete post modal -->
-                <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete" role="dialog" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-body text-center">
-                                <h1>
-                                    <i class="far fa-question-circle mt-2"></i>
-                                </h1>
-                                <h2 class="mt-4 mb-3">
-                                    <bold>Are you sure?</bold>
-                                </h2>
-                                <h5>Do you want to delete post?</h5>
-                                <a href="/post/delete/{{ post.id }}">
-                                    <button class="btn-lg btn-outline-danger mt-5 mr-2" type="button">Delete</button>
-                                </a>
-                                <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+            </thead>
+            <tbody>
+                {% for post in posts %}
+                    <tr style="text-align: center;">
+                        <td>{{ post.Title }}</td>
+                        <td>{{ post.Date|date("d/m/Y H:i") }}</td>
+                        <td>
+                            <a class="btn btn-success" href="#">Show Post</a>
+                        </td>
+                        <td>
+                            <a class="btn btn-warning" href="#">Edit Post</a>
+                        </td>
+
+                        <td>
+                            <button class="btn btn-outline-danger delete_post" data-target="#exampleModalCenterDelete" data-toggle="modal" type="button">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </td>
+                        <td>
+                            <button class="btn btn-outline-primary send_post" data-target="#exampleModalCenterSend" data-toggle="modal" type="button">
+                                <i class="fas fa-share-alt"></i>
+                            </button>
+                        </td>
+                    </tr>
+                    <!-- Delete post modal -->
+                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete" role="dialog" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body text-center">
+                                    <h1>
+                                        <i class="far fa-question-circle mt-2"></i>
+                                    </h1>
+                                    <h2 class="mt-4 mb-3">
+                                        <bold>Are you sure?</bold>
+                                    </h2>
+                                    <h5>Do you want to delete post?</h5>
+                                    <a href="/post/delete/{{ post.id }}">
+                                        <button class="btn-lg btn-outline-danger mt-5 mr-2" type="button">Delete</button>
+                                    </a>
+                                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Delete post modal -->
-                <!-- Send post modal -->
-                <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterSend" role="dialog" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-body text-center">
-                                <h1>
-                                    <i class="far fa-question-circle mt-2"></i>
-                                </h1>
-                                <h2 class="mt-4 mb-3">
-                                    <bold>Are you sure?</bold>
-                                </h2>
-                                <h5>Do you want to send post?</h5>
-                                <a {#href="/post/delete/{{ post.id }}"#}>
-                                    <button class="btn-lg btn-outline-primary mt-5 mr-2" type="button">Send</button>
-                                </a>
-                                <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+                    <!-- Delete post modal -->
+                    <!-- Send post modal -->
+                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterSend" role="dialog" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body text-center">
+                                    <h1>
+                                        <i class="far fa-question-circle mt-2"></i>
+                                    </h1>
+                                    <h2 class="mt-4 mb-3">
+                                        <bold>Are you sure?</bold>
+                                    </h2>
+                                    <h5>Do you want to send post?</h5>
+                                    <a {#href="/post/delete/{{ post.id }}"#}>
+                                        <button class="btn-lg btn-outline-primary mt-5 mr-2" type="button">Send</button>
+                                    </a>
+                                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Delete post modal -->
-            {% endfor %}
-        </tbody>
-    </table>
+                    <!-- Delete post modal -->
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     <div class="row d-flex justify-content-center w-100 paginator">
         {{ knp_pagination_render(posts) }}
     </div>
-     <script>
+    <script>
         $(document).ready(function () {
             $(".page-link").attr("href", "#");
-            
-            
+            $(".page-link").click(function () {
+                let html = $(this).html();
+                let url = "/posts?page=".concat(html);
+                $.ajax({
+                    url: url,
+                    success: function (data) {
+                        $(".content").html(data);
+                    }
+                });
+            });
+
         });
-        //$(".page-item").click(function {
-        //    console.log($(this).html());
-             //$.ajax({url: url, success: function(result){
-             //   $(".content").html(result);
-            //}});
-            //http://127.0.0.1:8000/posts?page=2
-       // });
     </script>
-   
+
 {% endblock %}
