--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -1,81 +1,86 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>
-            {% block title %}Facebook App
-            {% endblock %}
-        </title>
-        <!-- Assets -->
-        {% include 'mainpage/assets.html.twig' %}
-        <!-- Assets -->
-    </head>
-    {% block body %}
-        <body class="hold-transition sidebar-mini">
-            <div
-                class="wrapper" style="z-index: 5; position:relative;">
-                <!-- Navbar -->
-                {% include 'mainpage/navbar.html.twig' %}
-                <!-- /.navbar -->
-                <!-- Sidebar -->
-                {% include 'mainpage/sidebar.html.twig' %}
-                <!-- Sidebar -->
-                <!-- Content -->
-                    <div class="content-wrapper"> <div class="content">
-                        {% block alerts %}
-                            {% if message is defined %}
-                                <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
-                                    {{message}}
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                            {% elseif error is defined %}
-                                <div class="mt-3 alert alert-danger alert-dismissible fade show" role="alert">
-                                    {{ error }}
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                            {% endif %}
-                        {% endblock %}
-                        {% block content %}
-                            {% include 'mainpage/hello_page.html.twig' %}
-                        {% endblock %}
-                    </div>
-                </div>
-                <!-- Content -->
-                <!-- Footer -->
-                {% include 'mainpage/footer.html.twig' %}
-                <!-- Footer -->
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <title>
+        {% block title %}Facebook App
         {% endblock %}
-        {% block javascripts %}
-            <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-            <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-            <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-            <script src="{{ asset('css/dist/js/adminlte.min.js') }}"></script>
-            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
+    </title>
+    <!-- Assets -->
+    {% include 'mainpage/assets.html.twig' %}
+    <!-- Assets -->
+</head>
+{% block body %}
+<body class="hold-transition sidebar-mini">
+<div
+        class="wrapper" style="z-index: 5; position:relative;">
+    <!-- Navbar -->
+    {% include 'mainpage/navbar.html.twig' %}
+    <!-- /.navbar -->
+    <!-- Sidebar -->
+    {% include 'mainpage/sidebar.html.twig' %}
+    <!-- Sidebar -->
+    <!-- Content -->
+    <div class="content-wrapper">
+        <div class="content">
+            {% block alerts %}
+                {% if message is defined %}
+                    <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% elseif error is defined %}
+                    <div class="mt-3 alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ error }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
+            {% endblock %}
             <script>
-                $(".button").click(function () {
-                    let url = $(this).attr('id');
-
-                    $.ajax({
-                        url: url,
-                        success: function (result) {
-                            $(".content").html(result);
-                        }
-                    });
-                });
-
                 window.onload = function changeCursor() {
                     var selectors = document.querySelectorAll("h1, h2, h3, h4, h5, h6, th, tr, td");
-                    for(i=0; i<selectors.length; i++){
+                    for (i = 0; i < selectors.length; i++) {
                         selectors[i].style.cursor = "default";
                     }
                 }
             </script>
-        {% endblock %}
-    </body>
+            {% block content %}
+                {% include 'mainpage/hello_page.html.twig' %}
+            {% endblock %}
+        </div>
+    </div>
+    <!-- Content -->
+    <!-- Footer -->
+    {% include 'mainpage/footer.html.twig' %}
+    <!-- Footer -->
+</div>
+{% endblock %}
+{% block javascripts %}
+    <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="{{ asset('css/dist/js/adminlte.min.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <script>
+        $(".button").click(function () {
+            let url = $(this).attr('id');
+
+            $.ajax({
+                url: url,
+                success: function (result) {
+                    $(".content").html(result);
+                }
+            });
+        });
+    </script>
+{% endblock %}
+</body>
 </html>
